# eyes-rag

./: Dockerfile  avay.py  chunks.pkl  compose.yml  main.py  pyproject.toml
core/: config.py
routes/: main.py
routes/api/: chat.py  faq_rag.py
utils/: doc_ingester.py  rag.py
